--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,9 @@
+html {
+    scrollbar-gutter: stable;
+}
+
 body{
+    margin: 0;
     background-color: black;
     color: white;
     font-family: 'Courier New', Courier, monospace;
